# smallmatrix-tests

./: Cargo.toml
benches/: my_benchmark.rs
src/: lib.rs
tests/: blocks.rs  concat.rs  detinv.rs  iter.rs  matmul.rs  ops.rs  others.rs
tests/common/: mod.rs
