cargo-features = ["edition2021"]

[package]
name = "simd-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "*", features = [ "real_blackbox" ] }
genawaiter = "*"
more-asserts = "*"
num-traits = "*"
paste = "*"
quickcheck = "*"
quickcheck_macros = "*"
rand = "*"
rand_xoshiro = "*"
rayon = "*"
core_simd = { path = "../stdsimd/crates/core_simd" }

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
debug = 2
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1

[profile.release]
debug = 2
opt-level = 3
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

