cargo-features = ["edition2021"]

[package]
name = "simd-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FIXME: Only enable when quickcheck is enabled
genawaiter = "*"
more-asserts = "*"
num-traits = "*"
# FIXME: Make optional
rand = { version = "*", features = [ "min_const_gen" ] }
# FIXME: Make optional
quickcheck = "*"
core_simd = { path = "../stdsimd/crates/core_simd" }

[dev-dependencies]
criterion = { version = "*", features = [ "real_blackbox" ] }
paste = "*"
quickcheck = "*"
quickcheck_macros = "*"
rayon = "*"

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
debug = 2
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1

[profile.release]
debug = 2
opt-level = 3
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

